<?xml version="1.0" encoding="utf-8"?>
<!-- com.cloudclass.view.MyScrollView -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/viewPager_content"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone" >

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:background="#77777777"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <LinearLayout
                    android:id="@+id/dotLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/page_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <RelativeLayout
                android:id="@+id/ll_title1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tv_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/circle"
                    android:text="@string/tv_favorite"
                    android:textColor="@color/tutor_detail_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_favorite_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="更多.."
                    android:textColor="@color/tutor_detail_title"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2px"
                    android:layout_below="@id/tv_favorite"
                    android:layout_marginLeft="15dp"
                    android:background="@color/main_divider" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false" >
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <RelativeLayout
                android:id="@+id/ll_title2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/circle"
                    android:text="@string/tv_recommend"
                    android:textColor="@color/tutor_detail_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_recommend_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="更多.."
                    android:textColor="@color/tutor_detail_title"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2px"
                    android:layout_below="@id/tv_recommend"
                    android:layout_marginLeft="15dp"
                    android:background="@color/main_divider" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false" >
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <RelativeLayout
                android:id="@+id/ll_title3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/circle"
                    android:text="@string/tv_week"
                    android:textColor="@color/tutor_detail_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_week_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="更多.."
                    android:textColor="@color/tutor_detail_title"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2px"
                    android:layout_below="@id/tv_week"
                    android:layout_marginLeft="15dp"
                    android:background="@color/main_divider" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false" >
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone" >

            <RelativeLayout
                android:id="@+id/ll_title4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_vip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/circle"
                    android:text="@string/tv_vip"
                    android:textColor="@color/tutor_detail_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_vip_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="更多.."
                    android:textColor="@color/tutor_detail_title"
                    android:textSize="14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2px"
                    android:layout_below="@id/tv_vip"
                    android:layout_marginLeft="15dp"
                    android:background="@color/main_divider" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false" >
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>